crates/compiler/src/tests/e2e/good/0003_closure_as_func_arg/main.gom
fn apply(f: (int32) -> int32, x: int32) -> int32 {
    f(x)
}

fn main() {
    let result = apply(|n: int32| n * 2, 5);
    println(result.to_string());
}
